--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,11 @@ numpy = "^1.26.4"
 scipy = "^1.13.0"
 pandas = "^2.2.2"
 click = "^8.1.7"
-
-
 matplotlib = "^3.9.2"
+
+
+black = "^24.8.0"
+isort = "^5.13.2"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
